--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+  background-color: black;
+}
 h1 {
   font-family: Verdana;
   font-weight: normal;
@@ -6,7 +10,25 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+.copy {
+  text-align: right;
+  color: gray;
+}
+
 a {
   color: aquamarine;
   font-size: 16px;
+}
+
+p {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
 }
